Changelog BBL Core

//CHECK IN WORLD SPRAYING USES THE TAG SYSTEM

1.2.28
Added ruby, sapphire and peridot to ResourceNames.class
Disabled test event for tags
Disabled testing tags in core
Added more tag builders for block, item and fluid
Disabled all core testing blocks
Fixed seed_slot mcmeta file and added poppy to the images

1.2.27
Completely change the global tags system, new resources are added to the ResourceNames.class this contains a name of resource to add tags for
Inside the new CommonTags contains the tags for the resources eg gears, ingots, plates ect
Both of these can be added and expanded in the future by simply adding a resource name and/or type of resource
CommonTags.getTag("resource_name", "resource_type") will return the tag for that resource
The best way to ensure the tag is present is to use the name from ResourceNames.class and the types CommonTags.class so
CommonTags.getTag(ResourceNames.IRON, CommonTags.GEARS) will return the TagKey<Item> for iron gears (#c:gears/iron)
Removed the old tags classes and system for this

1.2.26
General tidy up of translation keys to follow a better standard translation key should be (component.mod_id.key)
    eg "item.bblcore.upgrade_base": "Upgrade Base", "chat.bblcore.modpack": "Modpack"
Try to use vanilla component just for consistency
Discord command now has a error message if empty, will now be empty by default

1.2.25
Renamed StartupServer config to CoreModpackConfig file is now in bbl/core/modpack
Removed the enabledPublicServerConfig, when the server name and server ip are set the server will be added to the multiplayer screen
Added /modpack and /version originally from Opolis Utilities, disabled till 1.22

1.2.24
Added Void Protection, enable in config, when player takes damage in the void player will be teleported to spawn/ players spawn

1.2.23
Tweaked tool tips for unbreakable blocks to show the correct harvest tool  / tag more friendly