@@ -18,7 +18,7 @@ loader_version_range=[2,)
 mod_id=bblcore
 mod_name=BBL Core
 mod_license=MIT
-mod_version=1.2.27
+mod_version=1.2.28
 mod_group_id=com.benbenlaw.core
 mod_authors=benbenlaw
 mod_description=The core mod for all of BBL Mods
