@@ -21,6 +21,9 @@
 
   "chat.bblcore.modpack": "You are playing %s version %s",
   "chat.bblcore.modpack_not_set": "Set modpack information in the config - config/bbl/core/modpack.toml",
+  "chat.bblcore.modpack_website": "Visit Modpack Page",
+  "chat.bblcore.modpack_update": "This modpack %s has an update available!",
+  "chat.bblcore.modpack_up_date": "Modpack up to date!",
   "chat.bblcore.discord": "Click to join our Discord server!",
   "chat.bblcore.discord_not_set": "Set discord information in the config - config/bbl/core/modpack.toml",
   "chat.bblcore.falling.home": "A Mysterious force has saved you, taking you home...",
@@ -37,5 +40,6 @@
   "tooltips.lighting_item.shift.held": "Right click to light colored blocks in world, SHIFT right click to enable and disable Mass Spraying, Use with colored blocks in crafting grid to spray!",
   "tooltips.bblcore.coloring_item.mass_spraying": ", Mass Spraying!",
   "jei.unbreakable_resource_block.name": "Resource Blocks"
+
 
 }
